# repo_sync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/: __init__.py  __main__.py  main.py
src/config/: __init__.py  config.py
src/log/: log.py
src/repo_sync/: __init__.py  local_repo.py  log.py  main.py  repo_sync.py  repo_syncer.py
