# See https://peps.python.org/pep-0621/

[project]
keywords = ['repository', 'synchronisation']
authors = [{ email = 'news1@vansteenwegen.org', name = 'Dieter Vansteenwegen' }]
name = 'Repo_sync' # No_spaces_allowed
readme = 'README.md'
version = '0.1.0'
description = 'Automated synchronisation of multiple local GIT repositories. Reads location of repos on your local machine from a config file and pulls latest versions from the remote.'
license = { file = 'LICENSE' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
]
requires-python = ">3.6"
# version can also be set in the dynamic field to get it from a __version__ file. Add
# version = { attr = "package.__version__" }
# to [tool.setuptools.dynamic]

# dependencies = [

# ]

[project.urls]
Homepage = 'https://boxfish.be'
Repository = 'https://github.com/dietervansteenwegen/repo_sync.git'
Changelog = 'https://github.com/dietervansteenwegen/repo_sync/blob/master/CHANGELOG.md'

[project.scripts]

repo_syncc = 'repo_sync.main:main'

[project.optional-dependencies]


[build-system]
requires = ['setuptools', 'setuptools-scm']
# build-backend = 'setuptools.build.meta'

[tool.setuptools.packages.find]
where = ['src'] # list of folders that contain the packages (['.'] by default)
include = [
    'repo_sync',
    # 'package_dir',
] # package names should match these glob patterns (['*'] by default)
# exclude = ['my_package.tests*'] # exclude packages matching these glob patterns (empty by default)

[tool.bandit]
exclude_dirs = ["tests"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # Pycodestyle errors
    "E",
    # Pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # McCabe complex structure
    "C901",
    # PEP8 Naming
    "N",
    # Flake8-Bandit
    "S",
    # Flake8-builtins
    "A",
    # Flake8-commas
    "COM",
    # Flake8-datetimez
    "DTZ",
    # Flake8-errmsg
    "EM",
    # Flake8-use-pathlib
    "PTH",
    # tryceratops
    "TRY",
]

ignore = [
    # Use logging.exception instead of logging.error
    "TRY400",
    # Raising and catching exceptions in the same block may lead to confusion
    "TRY301",

]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
exclude = ["*.pyi"]
